--- a/src/Components/Home/Time/Firstappointment.css
+++ b/src/Components/Home/Time/Firstappointment.css
@@ -14,7 +14,7 @@
     margin-bottom: 15px;
 }
 .inner-main{
-    background: #35dab9;
+    background: #9AC5F4;
     padding: 0 0 0 2rem;
 }
 .inner-time-detail h6{
@@ -28,7 +28,7 @@
 }
 .second{
     /* background: red; */
-    padding: 15px 20px 8px 20px;
+    padding: 15px 25px 8px 25px;
 }
 .second p{
     font-size: 15px;
