--- a/src/Components/Appointment/Details.css
+++ b/src/Components/Appointment/Details.css
@@ -12,19 +12,21 @@
      /* border: 1px solid;   */
      /* background-color: #f8f8fad8; */
      /* background: #effcfd57; */
-    padding-top: 2.5rem;
+    padding-top: 2rem;
    
 }
 .back-btn{
     border: none;
-    padding: 8px 15px;
+    padding: 5px 12px;
     background:  rgba(0,213,255,1);
     border-radius: 10px;
     margin-bottom: 1.5rem;
 }
 .back-btn svg{
     color: white;
-    font-size: 18px;
+    font-size: 16px;
+    stroke-width: 2px;
+    margin-bottom: 2px;
 }
 .back-btn:hover{
     background: rgb(4, 202, 241);
@@ -83,7 +85,7 @@
     /* padding: 20px; */
     border-radius: 10px;
     width: 90%;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
      box-shadow: rgba(50, 50, 93, 0.178) 0px 4px 10px -2px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;  
     /* box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
     /* background-color: #f8f8fa; */
