--- a/src/Components/Home/Header/Header.css
+++ b/src/Components/Home/Header/Header.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .body-header{
-    background: rgba(190, 188, 188, 0.178);
+    background: rgba(190, 188, 188, 0.103);
 }
 .header-row{
     /* border: 1px solid red;  */
@@ -16,9 +16,8 @@
 }
 .header-col{
     /* border: 1px solid; */
-    background: linear-gradient(90deg, rgb(2, 177, 212) 0%, rgba(122,233,244,1) 100%);
-    /* background: #caf0f8ab; */
-    /* background: #19a7ceb7; */
+    background: #4fc1d0c4;
+    /* background: linear-gradient(90deg, rgb(2, 177, 212) 0%, rgba(122,233,244,1) 100%); */
     padding: 1.5rem 1.5rem 0.3rem 1.5rem;
     border-radius: 8px;
     /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
@@ -36,3 +35,46 @@
     color: white;
     font-family: sans-serif;
 }
+
+
+@media only screen and (max-width: 820px){
+    .header-row{
+        width: 63%;
+    }
+   }
+   @media only screen and (max-width: 765px){
+    .header-row{
+        width: 68%;
+    }
+   }
+   @media only screen and (max-width: 720px){
+    .header-row{
+        width: 73%;
+    }
+   }
+   @media only screen and (max-width: 660px){
+    .header-row{
+        width: 78%;
+    }
+   }
+   @media only screen and (max-width: 620px){
+    .header-row{
+        width: 88%;
+    }
+   }
+   @media only screen and (max-width: 550px){
+    .header-row{
+        width: 93%;
+    }
+   }
+   @media only screen and (max-width: 460px){
+    .header-col h3{
+        font-size: 21px;
+    }
+   }
+   @media only screen and (max-width: 435px){
+    .header-col h3{
+        font-size: 19px;
+    }
+   }
+
