--- a/src/Components/Home/Header/Header.css
+++ b/src/Components/Home/Header/Header.css
@@ -55,6 +55,7 @@
    @media only screen and (max-width: 660px){
     .header-row{
         width: 78%;
+        padding-top: 2rem;
     }
    }
    @media only screen and (max-width: 620px){
@@ -65,6 +66,7 @@
    @media only screen and (max-width: 550px){
     .header-row{
         width: 93%;
+        padding-top: 1.5rem;
     }
    }
    @media only screen and (max-width: 460px){
@@ -75,6 +77,11 @@
    @media only screen and (max-width: 435px){
     .header-col h3{
         font-size: 19px;
+    }
+   }
+   @media only screen and (max-width: 300px){
+    .header-row{
+        width: 80%;
     }
    }
 
