--- a/src/Components/Appointment/Form.css
+++ b/src/Components/Appointment/Form.css
@@ -33,7 +33,7 @@ button.btn-close{
 }
 .css-2y464i-MuiInputBase-root-MuiFilledInput-root{
     border-radius: 10px!important;
-    height: 55px!important;
+    height: 50px!important;
     border: 1px solid #e9ecef!important;
     background-color: #f8f9fa!important;
 }
@@ -41,32 +41,39 @@ button.btn-close{
     border-radius: 10px!important;
     border: 1px solid rgba(128, 128, 128, 0.123)!important;
     background-color: #f8f9fa!important;
+    height: 90px!important;
 }
 .css-1jg2gny{
     border-bottom-left-radius: 10px!important;
     border-bottom-right-radius: 10px!important;
     border-top-left-radius: 10px!important;
     border-top-right-radius: 10px!important;
-    height: 55px!important;
+    height: 50px!important;
+    background-color: #f8f9fa!important;
+    border: 1px solid #e9ecef!important;
 }
 .css-12n0rmb{
     border-bottom-left-radius: 10px!important;
     border-bottom-right-radius: 10px!important;
     border-top-left-radius: 10px!important;
     border-top-right-radius: 10px!important;
+    height: 90px!important;
+    background-color: #f8f9fa!important;
+    border: 1px solid #e9ecef!important;
 }
 .css-14x1nlk{
-    font-size: 14px!important;
+    font-size: 12.5px!important;
 }
 .css-1njz7x1{
-    font-size: 14px!important;
+    font-size: 12.5px!important;
 }
 .css-e4w4as-MuiFormLabel-root-MuiInputLabel-root{
-    font-size: 14px!important;
+    font-size: 12.5px!important;
 }
 .css-1mog9k0-MuiFormLabel-root-MuiInputLabel-root{
-    font-size: 14px!important;
+    font-size: 12.5px!important;
 }
+
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none;
