--- a/src/Components/Home/Time/Timedetail.css
+++ b/src/Components/Home/Time/Timedetail.css
@@ -441,6 +441,39 @@
         width: 65%;
     }
     .nxt-btn{
-        margin-left: 3.7rem;
+        margin-left: 4.25rem;
     }
    }
+   @media only screen and (min-width: 901px) and (max-width: 940px) {
+    .time-box{
+        width: 58%;
+    }
+    .time-title{
+        width: 58%;
+    }
+   }
+   @media only screen and (min-width: 1000px) and (max-width: 1100px) {
+    .time-box{
+        width: 53%;
+    }
+    .time-title{
+        width: 53%;
+    }
+   }
+   @media only screen and (min-width: 1001px) and (max-width: 1200px) {
+    .time-box{
+        width: 52%;
+    }
+    .time-title{
+        width: 52%;
+    }
+   }
+   @media only screen and (min-width: 1526px) and (max-width: 1664px) {
+    .time-box{
+        width: 55%;
+    }
+    .time-title{
+        width: 55%;
+    }
+   }
+  
