--- a/src/Components/Appointment/calendarTimeslot.css
+++ b/src/Components/Appointment/calendarTimeslot.css
@@ -102,6 +102,9 @@
   font-size: 12.5px;
   padding: 0 1rem;
 }
+.react-calendar__month-view__weekdays{
+  pointer-events: none!important;
+}
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
   
