--- a/src/Components/Home/Header/Header.css
+++ b/src/Components/Home/Header/Header.css
@@ -109,3 +109,13 @@
         width: 54%;
     }
    }
+   @media only screen and (min-width: 1665px) and (max-width: 1900px){
+    .header-row{
+        width: 47%;
+    }
+   }
+   @media only screen and (min-width: 1901px) and (max-width: 1920px){
+    .header-row{
+        width: 44%;
+    }
+   }
