--- a/src/components/Announcement/OfferPage.css
+++ b/src/components/Announcement/OfferPage.css
@@ -58,3 +58,328 @@
     padding: 1.25rem 1.5rem;
   }
 }
+@media only screen and (max-width: 499px){
+  .offer-box{
+    padding-bottom: 1rem;
+    height: auto;
+    width: 420px;
+  }
+  .offer-box-title{
+    width: 420px;
+  }
+  .left-p{
+    font-size: 14px;
+  }
+  .right-p{
+    font-size: 11px;
+    width: 220px;
+    margin-left: 10px;
+  }
+  .announce-box{
+    padding-bottom: 1rem;
+    height: auto;
+    width: 420px;
+  }
+  .announce-box-title{
+    width: 420px;
+  }
+  .a-left-p{
+    font-size: 14px;
+  }
+  .a-right-p{
+    font-size: 11px;
+  }
+  .inner-expire{
+    width: 400px;
+  }
+  .second-inner{
+    gap: 0.5rem;
+    justify-content: space-between;
+  }
+  .e-right-div{
+    margin-left: 0;
+  }
+  .e-right-p{
+    font-size: 13px;
+    margin-left: 0;
+  }
+}
+@media only screen and (max-width: 470px){
+  .offer-box{
+    width: 400px;
+  }
+  .offer-box-title{
+    width: 400px;
+  }
+  .left-p{
+    font-size: 13px;
+  }
+  .right-p{
+    font-size: 10.5px;
+    width: 230px;
+  }
+  .right-p-img{
+    height: 13px;
+    width: 13px;
+  }
+  .announce-box{
+    width: 400px;
+  }
+  .announce-box-title{
+    width: 400px;
+  }
+  .a-left-p{
+    font-size: 13px;
+  }
+  .a-right-p{
+    font-size: 10.5px;
+  }
+  .a-right-p-img{
+    height: 13px;
+    width: 13px;
+  } 
+}
+@media only screen and (max-width: 449px){
+  .inner-expire {
+    width: 370px;
+}
+}
+@media only screen and (max-width: 415px){
+  .inner-expire {
+    width: 350px;
+}
+.inner-scroll-div{
+  margin: 0.75rem 0.3rem;
+}
+.second-inner p{
+  font-size: 12px;
+}
+}
+@media only screen and (max-width: 447px){
+  .offer-box{
+    width: 360px;
+  }
+  .offer-box-title{
+    width: 360px;
+  }
+  .right-p{
+    width: 205px;
+  }
+  .announce-box{
+    width: 360px;
+  }
+  .announce-box-title{
+    width: 360px;
+  }
+  .left-p{
+    font-size: 14px;
+  }
+  .inner-a-box{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+@media only screen and (max-width: 405px){
+  .offer-main{
+    padding: 1.25rem 1rem;
+  }
+}
+@media only screen and (max-width: 395px){
+  .offer-box{
+    width: 338px;
+  }
+  .offer-box-title{
+    width: 338px;
+  }
+  .right-p{
+    width: 130px;
+  }
+  .announce-box{
+    width: 338px;
+  }
+  .announce-box-title{
+    width: 338px;
+  }
+  .select-offer-main{
+    width: 90%;
+  }
+  .a-right-p{
+    margin-left: 45px;
+  }
+  .inner-expire {
+    width: 330px;
+  }
+  .second-inner{
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+@media only screen and (max-width: 360px){
+  .inner-expire {
+    width: 320px;
+  }
+}
+@media only screen and (max-width: 380px){
+  .offer-box{
+    width: 322px;
+  }
+  .offer-box-title{
+    width: 322px;
+  }
+  .announce-box{
+    width: 322px;
+  }
+  .announce-box-title{
+    width: 322px;
+  }
+  .a-right-p{
+    margin-left: 30px;
+  }
+}
+@media only screen and (max-width: 355px){
+  .offer-select{
+    font-size: 13.5px;
+  }
+  .offer-box{
+    width: 300px;
+  }
+  .offer-box-title{
+    width: 300px;
+  }
+  .announce-box{
+    width: 300px;
+  }
+  .announce-box-title{
+    width: 300px;
+  }
+  .second-div-offer{
+    padding: 17px 0.7rem;
+  }
+  .right-p{
+    width: 140px;
+  }
+  .inner-a-box {
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+}
+.a-left-p{
+  font-size: 12.2px;
+}
+.inner-expire {
+  width: 300px;
+}
+.second-inner p {
+  font-size: 11px;
+}
+.e-right-div img{
+  height: 12px;
+  width: 12px;
+}
+.e-radio-img{
+  height: 8px;
+  width: 8px;
+}
+}
+@media only screen and (max-width: 332px){
+  .select-offer-main{
+    width: 90%;
+  }
+  .offer-select{
+    font-size: 14px;
+  }
+  .offer-box{
+    width: 285px;
+  }
+  .offer-box-title{
+    width: 285px;
+  }
+  .announce-box{
+    width: 285px;
+  }
+  .announce-box-title{
+    width: 285px;
+  }
+  .left-p {
+    font-size: 13px;
+  }
+  .right-p {
+    width: 160px;
+  }
+  .second-a-box{
+    gap: 0.5rem;
+  }
+  .a-right-p {
+    margin-left: 16px;
+  }
+.inner-expire {
+  width: 285px;
+}
+.e-right-p {
+  width: 25%;
+}
+}
+@media only screen and (max-width: 315px){
+  .select-offer-main{
+    width: 100%;
+  }
+  .offer-box {
+    width: 272px;
+  }
+  .offer-box-title{
+    width: 272px;
+  }
+  .announce-box{
+    width: 272px;
+  }
+  .announce-box-title{
+    width: 272px;
+  }
+  .right-p {
+    width: 185px;
+    margin-left: 0;
+  }
+  .a-right-p {
+    margin-left: 10px;
+  }
+  .a-right-box{
+    gap: 0.5rem;
+  }
+  .inner-expire {
+    width: 100%;
+}
+}
+@media only screen and (max-width: 302px){
+.second-inner p{
+  width: 55%;
+}
+}
+@media only screen and (max-width: 300px){
+  .offer-box {
+    width: 252px;
+  }
+  .offer-box-title{
+    width: 252px;
+  }
+  .announce-box{
+    width: 252px;
+  }
+  .announce-box-title{
+    width: 252px;
+  }
+  .inner-bottom-div p{
+    font-size: 12px;
+  }
+  .second-a-box{
+    width: 70%;
+  }
+}
+@media only screen and (max-width: 500px){
+  /* .addoffer-div{
+    position: absolute;
+    bottom: -3rem;
+    justify-content: center;
+  }
+  .select-offer-main{
+    margin-bottom: 1.3rem;
+  } */
+}
