settings-responsive-continue-1st sep

--- a/src/components/Announcement/OfferPage.css
+++ b/src/components/Announcement/OfferPage.css
@@ -16,7 +16,9 @@
     width: 90%;
     
 }
-
+.addoffer-div button:hover{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .scrolldiv::-webkit-scrollbar{
     width: 7px;
   }
