--- a/src/pages/Settings.css
+++ b/src/pages/Settings.css
@@ -24,3 +24,13 @@
         padding: 1.25rem 1.5rem;
     }
 }
+@media only screen and (max-width: 530px){
+    .settings-main{
+        padding: 1.25rem 1rem;
+    }
+}
+@media only screen and (max-width: 400px){
+    .settings-main{
+        padding: 1.25rem 0.7rem;
+    }
+}
