--- a/src/shared/Table/Today.css
+++ b/src/shared/Table/Today.css
@@ -11,3 +11,13 @@
   /* min-width: 35%; */
   height: auto;
 }
+
+.today-table-div{
+  width: 100%;
+}
+/* th{
+  border: 1px solid;
+}
+td{
+  border: 1px solid;
+} */
