--- a/src/components/Appointment/Home.css
+++ b/src/components/Appointment/Home.css
@@ -9,6 +9,24 @@
 .customModal {
   background-color: #f5f5fa;
 }
+.appointment-main{
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  background: #f3f7f9b0;
+  
+}
+.appointment-main h1{
+  padding-bottom: 0.75rem;
+}
+.add-appoint-div{
+  width: 100%;
+  text-align: end;
+  margin-top: 1rem;
+}
+
+
 
 @media screen and (max-width: 800px) {
   .customModal {
