--- a/src/components/Appointment/Home.css
+++ b/src/components/Appointment/Home.css
@@ -26,6 +26,10 @@
   margin-top: 1rem;
 }
 
+.add-appoint-btn:hover{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  color: #614BC3;
+}
 
 
 @media screen and (max-width: 800px) {
