--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -48,6 +48,11 @@
         margin-top: 5px!important;
     }
 }
+@media only screen and (max-width: 767px){
+    .profileicon-svg{
+        margin-top: 4px;
+    }
+}
 @media only screen and (max-width: 515px){
     .fBfwOB{
         margin-left: 1rem!important;
