--- a/src/shared/Table/Today.css
+++ b/src/shared/Table/Today.css
@@ -31,4 +31,85 @@ td{
   .today-s{
     width: 140px;
   }
+  .today-accept-svg{
+    width: 15px;
+    height: 15px;
+  }
+  .today-reschedule-svg{
+    width: 15px;
+    height: 18px;
+  }
+  .today-delete-svg{
+    width: 15px;
+    height: 18px;
+  }
+  .today-item-name{
+    text-align: center;
+  }
+  .today-item-ser{
+    text-align: center;
+  }
+  .today-notified-btn{
+    font-size: 13px;
+  }
+  .today-notified-btn img{
+   width: 0.8rem;
+  }
+}
+@media only screen and (max-width: 630px){
+  .notify-div{
+    width: 90%;
+    margin: auto;
+  }
+}
+@media only screen and (max-width: 579px){
+  .today-n {
+    width: 135px;
+  }
+  .today-s {
+    width: 105px;
+  }
+  .today-s {
+    width: 125px;
+  }
+}
+@media only screen and (max-width: 571px){
+  .today-accept-svg{
+    width: 13px;
+    height: 13px;
+  }
+  .today-reschedule-svg{
+    width: 13px;
+    height: 15px;
+  }
+  .today-delete-svg{
+    width: 13px;
+    height: 15px;
+  }
+  .today-notified-btn{
+    font-size: 12px;
+  }
+  .today-notified-btn img{
+    width: 0.65rem;
+    margin-top: 2px;
+   }
+   .today-item-name{
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media only screen and (max-width: 520px){
+  .today-n {
+    width: 250px;
+  }
+  .today-s {
+    width: 55px;
+  }
+  .notify-div {
+    width: 80%;
+  }
+  .today-item-ser {
+   padding-left: 0;
+   padding-right: 0;
+  }
 }
