--- a/src/components/Profile/changePassword/changepassword.css
+++ b/src/components/Profile/changePassword/changepassword.css
@@ -5,10 +5,10 @@
 }
 input:focus {
   outline: none;
-  border: 1px solid blue;
+  border: 1px solid rgba(83, 211, 228, 0.438);
 }
 input {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   padding-left: 10px;
   border-radius: 5px;
   width: 360px;
