--- a/src/components/Profile/deactivateAccount/deactivateAccount.css
+++ b/src/components/Profile/deactivateAccount/deactivateAccount.css
@@ -13,11 +13,11 @@
   /* background-color:rgba(255,255,255,0.7); */
  
 }
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .customModal {
     width: 90%; 
   }
-}
+} */
 
 .closeIconInDeactivateAccount{
   /* position: absolute;
