--- a/src/components/Announcement/offermodal.css
+++ b/src/components/Announcement/offermodal.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 .customButton2{
-   top: 20px !important;
+   top: 8px !important;
   right: 8px;
   padding: 10px;
   width: 40px;
@@ -14,6 +14,43 @@
   right: 8px;
   padding: 10px;
   width: 40px;
+}
+/* .add-decript{
+  border: none;
+} */
+.add-decript:focus{
+  border: 1px solid rgba(83, 211, 228, 0.438);
+}
+.add-decript:focus{
+  border: 1px solid rgba(83, 211, 228, 0.438);
+}
+@media screen and (max-width: 767px){
+  .add-offers-form{
+    padding-top: 1rem;
+    width: 350px;
+  }
+  .add-offers-form h1{
+    padding-bottom: 0.5rem;
+  }
+  .offers-daterange{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 88.5%;
+  }
+  .from-to-div{
+    width: 140px;
+  }
+  .add-input{
+    padding-left: 12px;
+    /* border: none; */
+  }
+  .add-decript{
+    padding-left: 12px;
+    height: 80px;
+    padding-top: 5px;
+  }
+
 }
 /* .react-responsive-modal-closeButton {
   top: 10px !important;
